[package]
name = "audio_radar"
version = "0.1.0"
edition = "2024"

[dependencies]
wasapi = "0.20.0"
log = "0.4.28"
thiserror = "2.0.17"
simple_logger = "5.0.0"

[dependencies.windows]
version = "0.62.2"
features = ["Win32_Graphics", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_LibraryLoader"]
